--- a/calculadoraSecuencial.html
+++ b/calculadoraSecuencial.html
@@ -15,6 +15,10 @@
         <div class="numbers">
             <label for="num1">Valor un valor numérico</label>
             <input type="number" id="num" name="num">
+            <div class="styleMemory">
+            <h5 class="memory">En memoria:</h5>
+            <h5 id="memoryResult">0</h5>
+            </div>
         </div>
         <div class="buttons">
             <button type="button" id="add">+</button>
@@ -24,6 +28,8 @@
             <button type="button" id="result">=</button>
         </div>
 
+        
+        <h2 class="title">RESULTADO FINAL</h2>
         <h2 id="finalResult"></h2>
 
     </div>
